@@ -239,24 +239,21 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-name|CacheValue
-name|val
-decl_stmt|;
 synchronized|synchronized
 init|(
 name|this
 init|)
 block|{
+name|CacheValue
 name|val
-operator|=
+init|=
 name|byDirectoryCache
 operator|.
 name|get
 argument_list|(
 name|dir
 argument_list|)
-expr_stmt|;
-block|}
+decl_stmt|;
 if|if
 condition|(
 name|val
@@ -274,15 +271,6 @@ name|dir
 argument_list|)
 throw|;
 block|}
-if|if
-condition|(
-name|val
-operator|.
-name|path
-operator|!=
-literal|null
-condition|)
-block|{
 name|File
 name|dirFile
 init|=
